--- a/Supervised_learning/linear_regression.ipynb
+++ b/Supervised_learning/linear_regression.ipynb
@@ -5,7 +5,7 @@
    "id": "530f118d",
    "metadata": {},
    "source": [
-    "# Simple Linear Regression Example\n",
+    "# Linear Regression Example\n",
     "This notebook demonstrates a **basic linear regression** using synthetic data. Linear regression models the relationship between a **single independent variable** (feature) and a **continuous target variable**."
    ]
   },
@@ -72,7 +72,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
