Supervised vs Unsupervised

--- a/Unsupervised_learning/compare_supervised_unsupervised.ipynb
+++ b/Unsupervised_learning/compare_supervised_unsupervised.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Supervised Learning vs Unsupervised Learning (Simple Comparison)\n",
     "This notebook demonstrates a simple example comparing **supervised learning** and **unsupervised learning** using scikit-learn.\n",
-    "Both classification and clustering might produce a plot where:\n",
+    "Both might produce a plot where:\n",
     "- Points are colored by group.\n",
     "- Groups are separated with boundaries or circles.\n",
     "\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,27 +117,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Supervised vs. Unsupervised. Visually They Look Similar **BUT**:\n",
+    "## Supervised vs. Unsupervised. Visually They Look Similar **BUT**:\n",
     "- In **supervised learning**, the colors come from **known labels**.\n",
     "- In **unsupervised learning**, the model **guessed** the groups from scratch.\n",
     "\n",
-    "## Supervised Learning\n",
-    "> “You already know what the categories are — and you’re teaching the model to recognize them.”\n",
+    "### Supervised Learning\n",
+    "> “You already know what the categories are. You’re teaching the model to recognize them.”\n",
     "- You **have labeled data** (examples with correct answers).\n",
     "- The goal is to **assign known categories** to new data.\n",
     "- It’s like teaching with a **cheat sheet**.\n",
     "\n",
-    "## Unsupervised Learning\n",
-    "> “You have no idea what the categories are — the model tries to discover them on its own.”\n",
+    "### Unsupervised Learning\n",
+    "> “You have no idea what the categories are. The model tries to discover them on its own.”\n",
     "- You **don’t have labeled data**.\n",
     "- The goal is to **discover structure** or **groupings**.\n",
-    "- It’s like organizing without a cheat sheet — just using visual or statistical cues.\n",
+    "- It’s like organizing without a cheat sheet. Just using statistical cues.\n",
     "\n",
-    "## Summary\n",
+    "### Summary\n",
     "| Concept            | Summary                                      |\n",
     "|--------------------|----------------------------------------------|\n",
     "| **Supervised learning** | “Tell me which known category this belongs to.” |\n",
-    "| **Unsupervised learning**     | “Can you help me find natural groupings in this mess?” |\n"
+    "| **Unsupervised learning**     | \"Help me find natural groupings in this mess.” |\n"
    ]
   }
  ],
