logistic regression eval update

--- a/Supervised_learning/logistic_regression.ipynb
+++ b/Supervised_learning/logistic_regression.ipynb
@@ -8,9 +8,7 @@
     "\n",
     "# Logistic Regression – Estimating Probabilities for Yes/No Decisions\n",
     "\n",
-    "This notebook demonstrates a simple logistic regression model for binary classification. It uses synthetic data and visualizes the sigmoid probability curve and the decision boundary.\n",
-    "\n",
-    "---\n"
+    "This notebook demonstrates a simple logistic regression model for binary classification. It uses synthetic data and visualizes the sigmoid probability curve and the decision boundary."
    ]
   },
   {
