--- a/Supervised_learning/svm_classification.ipynb
+++ b/Supervised_learning/svm_classification.ipynb
@@ -36,7 +36,7 @@
     "# Generate more scattered 2D synthetic data\n",
     "X, y = make_classification(\n",
     "    n_samples=100, n_features=2, n_informative=1, n_redundant=0,\n",
-    "    n_clusters_per_class=1\n",
+    "    n_clusters_per_class=1, random_state=52\n",
     ")\n",
     "df = pd.DataFrame(X, columns=[\"Feature1\", \"Feature2\"])\n",
     "df[\"Label\"] = y\n",
