--- a/Regression_Forecasting/2_1_LinearRegression.ipynb
+++ b/Regression_Forecasting/2_1_LinearRegression.ipynb
@@ -26,9 +26,9 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
     "import matplotlib.pyplot as plt\n",
-    "!wget -q ../Week_2_Regression/week2_utils.py\n",
-    "import week2_utils as utils\n",
-    "!wget -q ../Week_2_Regression/marketing_daily.csv\n",
+    "!wget -q https://github.com/Jihun-ust/ust-mail-557/blob/b41d54eedfadeb66f23f106790a60ba8bfe9cf3c/Regression_Forecasting/reg_for_utils.py\n",
+    "import reg_for_utils as utils\n",
+    "!wget -q https://github.com/Jihun-ust/ust-mail-557/blob/b41d54eedfadeb66f23f106790a60ba8bfe9cf3c/Regression_Forecasting/marketing_daily.csv\n",
     "\n",
     "df = pd.read_csv(\"marketing_daily.csv\", parse_dates=[\"date\"]).sort_values(\"date\")\n",
     "df.head()"
