--- a/Regression_Forecasting/2_1_LinearRegression.ipynb
+++ b/Regression_Forecasting/2_1_LinearRegression.ipynb
@@ -26,11 +26,11 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
     "import matplotlib.pyplot as plt\n",
-    "!wget -q https://github.com/Jihun-ust/ust-mail-557/blob/b41d54eedfadeb66f23f106790a60ba8bfe9cf3c/Regression_Forecasting/reg_for_utils.py\n",
+    "!wget -q https://github.com/Jihun-ust/ust-mail-557/4d1b979d6cc9600d566425946fdc2b4f00d4e74b/Regression_Forecasting/reg_for_utils.py\n",
     "import reg_for_utils as utils\n",
-    "!wget -q https://github.com/Jihun-ust/ust-mail-557/blob/b41d54eedfadeb66f23f106790a60ba8bfe9cf3c/Regression_Forecasting/marketing_daily.csv\n",
+    "csv_path = \"https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/b41d54eedfadeb66f23f106790a60ba8bfe9cf3c/Regression_Forecasting/marketing_daily.csv\"\n",
     "\n",
-    "df = pd.read_csv(\"marketing_daily.csv\", parse_dates=[\"date\"]).sort_values(\"date\")\n",
+    "df = pd.read_csv(csv_path, parse_dates=[\"date\"]).sort_values(\"date\")\n",
     "df.head()"
    ]
   },
