--- a/Regression_Forecasting/2_1_LinearRegression.ipynb
+++ b/Regression_Forecasting/2_1_LinearRegression.ipynb
@@ -26,9 +26,9 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
     "import matplotlib.pyplot as plt\n",
-    "!wget -q https://github.com/Jihun-ust/ust-mail-557/f305d366b6a6b97156cf93fd9b44c1f4d1e742cd/Regression_Forecasting/reg_for_utils.py\n",
+    "!wget -q https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Regression_Forecasting/reg_for_utils.py\n",
     "import reg_for_utils as utils\n",
-    "csv_path = \"https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/f305d366b6a6b97156cf93fd9b44c1f4d1e742cd/Regression_Forecasting/marketing_daily.csv\"\n",
+    "csv_path = \"https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Regression_Forecasting/marketing_daily.csv\"\n",
     "\n",
     "df = pd.read_csv(csv_path, parse_dates=[\"date\"]).sort_values(\"date\")\n",
     "df.head()"
