--- a/Regression_Forecasting/2_1_LinearRegression.ipynb
+++ b/Regression_Forecasting/2_1_LinearRegression.ipynb
@@ -5,7 +5,7 @@
    "id": "29b376c6",
    "metadata": {},
    "source": [
-    "# Week 2 — Module 1: Linear Regression\n",
+    "# Linear Regression\n",
     "\n",
     "**Scenario (Marketing)**: Predict daily revenue from ad spend, promotions, price index, weather, and weekend effects for a digital storefront.\n",
     "We will fit a baseline linear regression, evaluate with time-based split, and visualize predictions."
