--- a/Regression_Forecasting/2_2_Regularization.ipynb
+++ b/Regression_Forecasting/2_2_Regularization.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd, numpy as np, matplotlib.pyplot as plt\n",
-    "from sklearn.linear_model import RidgeCV, LassoCV, ElasticNetCV\n",
+    "from sklearn.linear_model import RidgeCV, LassoCV, ElasticNetCV, LinearRegression\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "from sklearn.pipeline import Pipeline\n",
@@ -28,7 +28,7 @@
     "import reg_for_utils as utils\n",
     "csv_path = \"https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Regression_Forecasting/marketing_daily.csv\"\n",
     "\n",
-    "df = pd.read_csv(\"marketing_daily.csv\", parse_dates=[\"date\"]).sort_values(\"date\")\n",
+    "df = pd.read_csv(csv_path, parse_dates=[\"date\"]).sort_values(\"date\")\n",
     "\n",
     "features = [\"search_spend\",\"social_spend\",\"display_spend\",\"promo\",\"price_index\",\"temp_F\",\"rain\",\"is_weekend\"]\n",
     "target = \"revenue\"\n",
@@ -60,10 +60,12 @@
    "source": [
     "alphas = np.logspace(-3, 3, 30)\n",
     "\n",
+    "pipe = Pipeline([(\"pre\", pre), (\"lr\", LinearRegression())])\n",
     "ridge = Pipeline([(\"pre\", pre), (\"est\", RidgeCV(alphas=alphas, cv=tscv))])\n",
     "lasso = Pipeline([(\"pre\", pre), (\"est\", LassoCV(alphas=alphas, cv=tscv, max_iter=20000, n_jobs=None))])\n",
     "enet  = Pipeline([(\"pre\", pre), (\"est\", ElasticNetCV(alphas=alphas, l1_ratio=[.2,.5,.8,.95,1.0], cv=tscv, max_iter=20000))])\n",
     "\n",
+    "pipe.fit(X_train, y_train)\n",
     "ridge.fit(X_train, y_train)\n",
     "lasso.fit(X_train, y_train)\n",
     "enet.fit(X_train, y_train)"
@@ -76,6 +78,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Linear Regression w/o Regularization\n",
+    "y_pred = pipe.predict(X_test)\n",
+    "utils.plot_series(test[\"date\"], y_test, y_pred, title=\"Linear Regression w/o Regularization — actual vs. predicted\")\n",
+    "\n",
     "# Ridge\n",
     "y_pred_ridge = ridge.predict(X_test)\n",
     "utils.plot_series(test[\"date\"], y_test, y_pred_ridge, title=\"Ridge — actual vs. predicted\")\n",
@@ -110,6 +116,7 @@
     "    return pd.DataFrame({\"feature\": names, \"coef\": coefs}).sort_values(\"coef\", key=abs, ascending=False)\n",
     "\n",
     "coef_ridge = coef_table(ridge); coef_lasso = coef_table(lasso); coef_enet = coef_table(enet)\n",
+    "print('BeforeRegularization', \"RMSE:\", utils.rmse(y_test, y_pred), \"MAE:\", utils.mae(y_test, y_pred))\n",
     "print('Ridge', \"RMSE:\", utils.rmse(y_test, y_pred_ridge), \"MAE:\", utils.mae(y_test, y_pred_ridge))\n",
     "print('Lasso', \"RMSE:\", utils.rmse(y_test, y_pred_lasso), \"MAE:\", utils.mae(y_test, y_pred_lasso))\n",
     "print('ElNet', \"RMSE:\", utils.rmse(y_test, y_pred_enet), \"MAE:\", utils.mae(y_test, y_pred_enet))\n",
@@ -117,12 +124,6 @@
     "coeffs = pd.concat([coef_ridge, coef_lasso['coef'], coef_enet['coef']], axis=1)\n",
     "new_column_names = ['feature', 'ridge_coef', 'lasso_coef', 'enet_coef']\n",
     "coeffs.columns = new_column_names\n",
-    "plt.scatter(coeffs.index, coeffs['ridge_coef'])\n",
-    "plt.scatter(coeffs.index, coeffs['lasso_coef'])\n",
-    "plt.scatter(coeffs.index, coeffs['enet_coef'])\n",
-    "plt.legend(['Ridge', 'Lasso', 'ElasticNet'])\n",
-    "plt.title(\"Sparsity\")\n",
-    "plt.show()\n",
     "coeffs.head(10)"
    ]
   }
