tree based regression update

--- a/Regression_Forecasting/2_4_Tree_Ensemble_Regression.ipynb
+++ b/Regression_Forecasting/2_4_Tree_Ensemble_Regression.ipynb
@@ -167,7 +167,10 @@
     "  - **Near-zero importances** (and CIs that cross zero) mean the model isn’t really using that feature for predictive power.\n",
     "- **Leadership takeaway:** This lets you rank which business drivers (e.g., search vs. social spend, weather, price index) the model relies on most, and whether the signal is robust or fragile.\n",
     "\n",
-    "- Note: This section takes longer to explain because permutation importance with confidence intervals not only ranks features but also conveys **statistical uncertainty**, which requires unpacking both the *ranking* and the *reliability* of those rankings — unlike other plots (PDP, residuals, overfit checks) that are more visual and intuitive at a glance."
+    "- **Note**: Permutation importances can take much longer to execute than other diagnostics because it repeatedly retrains on resampled data and shuffles each feature many times, multiplying computation cost across features and bootstraps.\n",
+    "  - FYI: Estimated time of executions\n",
+    "    - Basic runtime: **approx. 1 hour** (Google Colab free tier, typically 2-core vCPU, K80 or T4 GPU)\n",
+    "    - Better runtime: **approx. 6 minutes** (Tested on 10-core CPU, 10-core GPU, 16-core Neural Engine)"
    ]
   },
   {
@@ -453,7 +456,7 @@
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
     "from sklearn.tree import DecisionTreeRegressor \n",
     "\n",
-    "# ---- A) Grid: n_estimators × max_depth (works for RF & GBR; DT uses max_depth only) ----\n",
+    "# Grid: n_estimators × max_depth (works for RF & GBR; DT uses max_depth only)\n",
     "def grid_eval(est, Xtr, ytr, Xva, yva,\n",
     "              n_estimators_list=(50, 100, 200, 400),\n",
     "              max_depth_list=(None, 3, 5, 7)):\n",
@@ -504,7 +507,7 @@
     "    ax.set_title(f\"Train vs. Val RMSE across trees & depths — {MODEL_KEY.upper()}\")\n",
     "    ax.legend(ncol=2); plt.tight_layout(); plt.show()\n",
     "\n",
-    "# ---- B) Early‑stopping style curves (only for GBR) ----\n",
+    "# Early‑stopping style curves (only for GBR)\n",
     "if isinstance(fe, GradientBoostingRegressor):\n",
     "    # Refit a cloned model with more estimators to get smooth staged curves\n",
     "    gbr = clone(estimator).set_params(**{param_key(\"n_estimators\"): 600})\n",
