--- a/Regression_Forecasting/2_2_Regularization.ipynb
+++ b/Regression_Forecasting/2_2_Regularization.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd, numpy as np, matplotlib.pyplot as plt\n",
+    "import pandas as pd, numpy as np, matplotlib.pyplot as plt, warnings\n",
     "from sklearn.linear_model import RidgeCV, LassoCV, ElasticNetCV, LinearRegression\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
@@ -27,7 +27,7 @@
     "!wget -q https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Regression_Forecasting/reg_for_utils.py\n",
     "import reg_for_utils as utils\n",
     "csv_path = \"https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Regression_Forecasting/marketing_daily.csv\"\n",
-    "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "df = pd.read_csv(csv_path, parse_dates=[\"date\"]).sort_values(\"date\")\n",
     "\n",
     "features = [\"search_spend\",\"social_spend\",\"display_spend\",\"promo\",\"price_index\",\"temp_F\",\"rain\",\"is_weekend\"]\n",
