--- a/Regression_Forecasting/2_3_FeatureExpansion_Splines.ipynb
+++ b/Regression_Forecasting/2_3_FeatureExpansion_Splines.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd, numpy as np, matplotlib.pyplot as plt\n",
+    "import pandas as pd, numpy as np, matplotlib.pyplot as plt, warnings\n",
     "from sklearn.preprocessing import PolynomialFeatures, StandardScaler, OneHotEncoder\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
@@ -27,6 +27,7 @@
     "!wget -q https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Regression_Forecasting/reg_for_utils.py\n",
     "import reg_for_utils as utils\n",
     "csv_path = \"https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Regression_Forecasting/marketing_daily.csv\"\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "df = pd.read_csv(csv_path, parse_dates=[\"date\"]).sort_values(\"date\")\n",
     "train, test = utils.time_train_test_split(df, \"date\", test_days=90)\n",
