--- a/Regression_Forecasting/2_3_Polynomial_Fits_1_to_4.ipynb
+++ b/Regression_Forecasting/2_3_Polynomial_Fits_1_to_4.ipynb
@@ -25,7 +25,7 @@
     "# Imports & global style\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt, warnings\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
@@ -38,7 +38,8 @@
     "plt.rcParams['axes.grid'] = True\n",
     "plt.rcParams['grid.alpha'] = 0.3\n",
     "plt.rcParams['figure.dpi'] = 140\n",
-    "plt.rcParams['font.size'] = 12\n"
+    "plt.rcParams['font.size'] = 12\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -46,7 +47,7 @@
    "id": "935cd7cc",
    "metadata": {},
    "source": [
-    "## 1) Generate Data\n",
+    "## Generate Data\n",
     "Create a clearly non-linear signal (approximately cubic) with Gaussian noise and a few outliers to make differences between low and high polynomial degrees more evident."
    ]
   },
@@ -111,7 +112,7 @@
    "id": "d7f62831",
    "metadata": {},
    "source": [
-    "## 2) Fit & Evaluate Polynomial Models (Degrees 1–4)\n",
+    "## Fit & Evaluate Polynomial Models (Degrees 1–4)\n",
     "Fit four models using a scikit-learn pipeline: `PolynomialFeatures(degree=d)` + `LinearRegression()`.\n",
     "Report **MSE** and **R²** on both train and test sets.\n"
    ]
@@ -159,7 +160,7 @@
    "id": "46c4c977",
    "metadata": {},
    "source": [
-    "## 3) Visual Comparison\n",
+    "## Visual Comparison\n",
     "Overlay the fitted curves for degrees 1–4 on a dense grid. Differences should be visible:\n",
     "- **Degree 1–2** underfit the cubic trend.\n",
     "- **Degree 3** matches the underlying pattern best.\n",
@@ -228,7 +229,7 @@
    "id": "5ea80dd5",
    "metadata": {},
    "source": [
-    "## 4) What to Notice\n",
+    "## What to Notice\n",
     "- **Underfitting**: Degrees **1** and sometimes **2** cannot capture the curvature of the true signal → lower R² and higher error.\n",
     "- **Right capacity**: Degree **3** matches the (approximate) data-generating process → best or near-best test performance.\n",
     "- **Overfitting risk**: Degree **4** can **chase outliers/noise**, sometimes improving train fit but hurting test metrics.\n",
