--- a/Regression_Forecasting/2_3_Spline_Fits_Comparison.ipynb
+++ b/Regression_Forecasting/2_3_Spline_Fits_Comparison.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt, warnings\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import SplineTransformer\n",
@@ -31,7 +31,8 @@
     "plt.rcParams['axes.grid'] = True\n",
     "plt.rcParams['grid.alpha'] = 0.3\n",
     "plt.rcParams['figure.dpi'] = 140\n",
-    "plt.rcParams['font.size'] = 12"
+    "plt.rcParams['font.size'] = 12\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
