--- a/Regression_Forecasting/2_4_Random_Forest_TreeShape_Visuals.ipynb
+++ b/Regression_Forecasting/2_4_Random_Forest_TreeShape_Visuals.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt, warnings\n",
     "\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.tree import plot_tree\n",
@@ -36,7 +36,8 @@
     "plt.rcParams['axes.grid'] = True\n",
     "plt.rcParams['grid.alpha'] = 0.3\n",
     "plt.rcParams['figure.dpi'] = 140\n",
-    "plt.rcParams['font.size'] = 12\n"
+    "plt.rcParams['font.size'] = 12\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -44,7 +45,7 @@
    "id": "3ac151c1",
    "metadata": {},
    "source": [
-    "## 1) Datasets\n",
+    "## Datasets\n",
     "- **1D**: Nonlinear target for step-like RF prediction and decision path.\n",
     "- **2D**: Nonlinear surface for heatmap and feature-usage analysis.\n"
    ]
@@ -91,7 +92,7 @@
    "id": "3e127735",
    "metadata": {},
    "source": [
-    "## 2) Train Random Forest Models"
+    "## Train Random Forest Models"
    ]
   },
   {
@@ -115,7 +116,7 @@
    "id": "69de1fd5",
    "metadata": {},
    "source": [
-    "## 3) Single Tree Diagram (Truncated)\n",
+    "## Single Tree Diagram (Truncated)\n",
     "Visualize one tree (depth-limited) to see split structure and thresholds.\n"
    ]
   },
@@ -138,7 +139,7 @@
    "id": "2975b4d3",
    "metadata": {},
    "source": [
-    "## 4) Depth Distribution Across Trees\n",
+    "## Depth Distribution Across Trees\n",
     "How deep do trees grow in the forest?\n"
    ]
   },
@@ -166,7 +167,7 @@
    "id": "94a1b819",
    "metadata": {},
    "source": [
-    "## 5) Feature Usage Frequency (2D)\n",
+    "## Feature Usage Frequency (2D)\n",
     "Count how often each feature appears in splits across all trees (rf2d)."
    ]
   },
@@ -204,7 +205,7 @@
    "id": "686242fd",
    "metadata": {},
    "source": [
-    "## 6) 1D Prediction Curve (Step-like)\n",
+    "## 1D Prediction Curve (Step-like)\n",
     "Random Forest in 1D yields a piecewise-constant/step-like prediction. Overlay with training points.\n"
    ]
   },
@@ -234,7 +235,7 @@
    "id": "6bb1970d",
    "metadata": {},
    "source": [
-    "## 7) 2D Prediction Surface (Heatmap)\n",
+    "## 2D Prediction Surface (Heatmap)\n",
     "Visualize how the forest partitions 2D space by plotting predicted values on a grid.\n"
    ]
   },
@@ -268,7 +269,7 @@
    "id": "9c4c5de4",
    "metadata": {},
    "source": [
-    "## 8) Decision Path for One Sample (1D)\n",
+    "## Decision Path for One Sample (1D)\n",
     "Trace which thresholds a given sample crosses in a **single tree** of the 1D forest.\n"
    ]
   },
@@ -319,7 +320,7 @@
    "id": "844c1bd2",
    "metadata": {},
    "source": [
-    "## 9) Per-tree Leaf Prediction Distribution (1D)\n",
+    "## Per-tree Leaf Prediction Distribution (1D)\n",
     "For the same sample \\(x = 0.8\\), collect each tree's **leaf prediction** and plot a histogram.  \n",
     "This shows how diverse individual trees are **before averaging**.\n"
    ]
