--- a/Regression_Forecasting/2_5_GLM_Fitline_Variance.ipynb
+++ b/Regression_Forecasting/2_5_GLM_Fitline_Variance.ipynb
@@ -24,10 +24,11 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt, warnings\n",
     "from sklearn.linear_model import LinearRegression, PoissonRegressor, GammaRegressor\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "np.random.seed(42)"
+    "np.random.seed(42)\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -36,7 +37,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 1) Generate synthetic count data (Poisson, log link)\n",
+    "## Generate synthetic count data (Poisson, log link)\n",
     "\n",
     "Create a single predictor `x` and a Poisson outcome `y` with:\n",
     "\\[\n",
@@ -86,7 +87,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 2) Fit models\n",
+    "## Fit models\n",
     "- **Linear Regression (OLS)** on counts (treats variance as constant, can predict negatives).\n",
     "- **Poisson GLM** with log link (ensures non‑negative mean and variance = mean).\n"
    ]
@@ -122,7 +123,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 3) Variance areas (±2·SD) on the natural scale\n",
+    "## Variance areas (±2·SD) on the natural scale\n",
     "\n",
     "- **OLS (Linear Regression)** assumes **constant variance**: estimate \\(\\sigma^2\\) from residuals and draw a **constant-width** band around the fitted line.\n",
     "- **Poisson GLM** assumes \\(\\mathrm{Var}(Y)=\\mu\\): the **band widens** as the mean increases (using \\(\\pm 2\\sqrt{\\mu}\\)).\n"
@@ -167,7 +168,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 4) Visualization A — Poisson GLM: Fit line with variance area\n",
+    "## Visualization A — Poisson GLM: Fit line with variance area\n",
     "- The shaded region **expands** as `x` increases because \\(\\mathrm{Var}(Y)\\) grows with \\(\\mu\\).\n",
     "- This matches the **count data reality** (higher means → higher dispersion).\n"
    ]
@@ -209,7 +210,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 5) Visualization B — OLS: Fit line with constant variance area\n",
+    "## Visualization B — OLS: Fit line with constant variance area\n",
     "- The shaded region is **constant width** because OLS assumes **homoscedasticity** (constant variance).\n",
     "- Notice how the band **understates variability** at high means and **overstates it** at low means.\n"
    ]
@@ -240,7 +241,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 6) Visualization C — Overlay of mean fits (no bands)\n",
+    "## Visualization C — Overlay of mean fits (no bands)\n",
     "- Compare the **mean predictions** directly:\n",
     "  - OLS line can cross negative territory (not shown here) and grows linearly.\n",
     "  - Poisson GLM grows **exponentially** (log link) and stays non‑negative.\n"
@@ -271,7 +272,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 7) What to tell a stakeholder\n",
+    "## What to tell a stakeholder\n",
     "\n",
     "- **Why GLM?** For counts, **variance rises with the mean**; GLMs (Poisson) model that explicitly. Linear regression assumes constant variance and can mislead confidence.  \n",
     "- **Visual cue:** The **Poisson band widens** as the mean rises — this matches how count processes behave (e.g., more traffic → more variability).  \n",
