--- a/Regression_Forecasting/Energy_Forecast_Methods.ipynb
+++ b/Regression_Forecasting/Energy_Forecast_Methods.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt, warnings\n",
     "\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder, PolynomialFeatures\n",
     "from sklearn.compose import ColumnTransformer\n",
@@ -40,6 +40,7 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
     "np.random.seed(42)\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "def rmse(y_true, y_pred):\n",
     "    return float(np.sqrt(mean_squared_error(y_true, y_pred)))"
@@ -51,7 +52,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 1) Create a synthetic hourly dataset (1 year)\n",
+    "## Create a synthetic hourly dataset (1 year)\n",
     "\n",
     "- **Seasonality**: daily (hour-of-day) and annual (day-of-year) cycles  \n",
     "- **Weather**: temperature affects usage in a U-shaped way (heating/cooling)  \n",
@@ -133,7 +134,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 2) Time-based split (train vs. test)\n",
+    "## Time-based split (train vs. test)\n",
     "\n",
     "Use the **last 6 weeks** as holdout to mimic forward-looking evaluation.\n"
    ]
@@ -171,7 +172,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 3) Fit models\n",
+    "## Fit models\n",
     "\n",
     "Fit OLS, regularized linear models, feature-expanded linear model, Random Forest, GLM (Gamma), and Quantile Regressors (P10/P50/P90).\n"
    ]
@@ -225,7 +226,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 4) Evaluation metrics\n",
+    "## Evaluation metrics\n",
     "\n",
     "- For mean-focused models: **RMSE**, **MAE**, **R²**  \n",
     "- For quantile models: **pinball loss** at respective τ\n"
@@ -266,7 +267,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 5) Visual — Actual vs Predicted (OLS)\n"
+    "## Actual vs Predicted (OLS)\n"
    ]
   },
   {
@@ -290,7 +291,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 6) Visual — Actual vs Predicted (Random Forest)\n"
+    "## Actual vs Predicted (Random Forest)\n"
    ]
   },
   {
@@ -314,7 +315,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 7) Visual — Actual vs Predicted (Gamma GLM)\n"
+    "## Actual vs Predicted (Gamma GLM)\n"
    ]
   },
   {
@@ -338,7 +339,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 8) Visual — Quantile band (P10–P90) with Median (P50)\n"
+    "## Quantile band (P10–P90) with Median (P50)\n"
    ]
   },
   {
@@ -369,7 +370,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 9) Visual — Residuals vs Temperature (Random Forest)\n"
+    "## Residuals vs Temperature (Random Forest)\n"
    ]
   },
   {
@@ -394,7 +395,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 10) Calibration — Empirical coverage for quantiles\n"
+    "## Calibration — Empirical coverage for quantiles\n"
    ]
   },
   {
@@ -426,7 +427,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 11) Rolling RMSE — stability over time (OLS vs RF)\n"
+    "## Rolling RMSE — stability over time (OLS vs RF)\n"
    ]
   },
   {
