--- a/Classification/3_3_RandomForest.ipynb
+++ b/Classification/3_3_RandomForest.ipynb
@@ -33,6 +33,7 @@
     "!wget -q https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Classification/classification_utils.py\n",
     "import classification_utils as utils\n",
     "csv_path = \"https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Classification/classification.csv\"\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "df = pd.read_csv(csv_path, parse_dates=[\"ts\"]).sort_values(\"ts\")\n",
     "train, test = utils.chrono_split(df, \"ts\", test_frac=0.2)\n",
