--- a/Classification/3_3_RandomForest_Conceptual_Visuals.ipynb
+++ b/Classification/3_3_RandomForest_Conceptual_Visuals.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt, warnings\n",
     "\n",
     "from sklearn.datasets import make_moons, make_classification\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -35,7 +35,8 @@
     "from sklearn.metrics import (accuracy_score, roc_auc_score, average_precision_score)\n",
     "from sklearn.inspection import permutation_importance, PartialDependenceDisplay\n",
     "\n",
-    "np.random.seed(12)\n"
+    "np.random.seed(12)\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -66,7 +67,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## A) Single Tree vs Forest (2D Moons)\n",
+    "## Single Tree vs Forest (2D Moons)\n",
     "\n",
     "We use a 2D \"moons\" dataset to literally see the boundary: trees create **piecewise-constant** regions; forests **average** them.\n"
    ]
@@ -125,7 +126,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## B) Bagging / Bootstrapping Intuition\n",
+    "## Bagging / Bootstrapping Intuition\n",
     "\n",
     "Each tree trains on a **bootstrap sample** of the data (sampled with replacement). Points not sampled for that tree are **OOB (out-of-bag)** for that tree.\n"
    ]
@@ -156,7 +157,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## C) Voting Intuition (Averaging Trees)\n",
+    "## Voting Intuition (Averaging Trees)\n",
     "\n",
     "The forest averages per-tree probabilities → **smoother** decisions than any single tree.\n"
    ]
@@ -195,7 +196,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## D) OOB vs Validation Metrics\n",
+    "## OOB vs Validation Metrics\n",
     "\n",
     "OOB approximates test performance without a separate validation set (a *built-in* cross-validation from bootstrapping).\n"
    ]
@@ -220,7 +221,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## E) Effect of Number of Trees\n",
+    "## Effect of Number of Trees\n",
     "\n",
     "More trees reduce variance and stabilize metrics, up to diminishing returns.\n"
    ]
@@ -259,7 +260,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## F) What Drives Predictions? (Importances + PDP on Tabular Data)\n",
+    "## What Drives Predictions? (Importances + PDP on Tabular Data)\n",
     "\n",
     "We switch to a 10‑feature tabular dataset to compare **Gini** vs **Permutation** importances, then plot a **PDP**.\n"
    ]
