--- a/Classification/3_1_LogisticRegression.ipynb
+++ b/Classification/3_1_LogisticRegression.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd, numpy as np, matplotlib.pyplot as plt\n",
+    "import pandas as pd, numpy as np, matplotlib.pyplot as plt, warnings\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "from sklearn.pipeline import Pipeline\n",
@@ -40,17 +40,19 @@
     "import classification_utils as utils\n",
     "csv_path = \"https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Classification/classification.csv\"\n",
     "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
     "df = pd.read_csv(csv_path, parse_dates=[\"ts\"]).sort_values(\"ts\")\n",
     "train, test = utils.chrono_split(df, \"ts\", test_frac=0.2)\n",
     "\n",
-    "features = [\"ad_channel\",\"device\",\"region\",\"campaign\",\"spend_l7\",\"pages_per_session\",\"sessions_l30\",\"time_on_site_s\",\"pricing_views_l7\",\"email_opens_l30\",\"past_purchases\",\"tenure_days\",\"discount_flag\",\"competitor_visits\"]\n",
+    "features = [\"ad_channel\",\"device\",\"region\",\"campaign\",\"spend_l7\",\"pages_per_session\",\"sessions_l30\",\"time_on_site_s\",\"pricing_views_l7\",\"past_purchases\",\"discount_flag\",\"competitor_visits\"]\n",
     "target = \"converted\"\n",
     "\n",
     "X_train, y_train = train[features], train[target]\n",
     "X_test, y_test = test[features], test[target]\n",
     "\n",
     "pre = ColumnTransformer([\n",
-    "    (\"num\", StandardScaler(), [\"spend_l7\",\"pages_per_session\",\"sessions_l30\",\"time_on_site_s\",\"pricing_views_l7\",\"email_opens_l30\",\"past_purchases\",\"tenure_days\"]),\n",
+    "    (\"num\", StandardScaler(), [\"spend_l7\",\"pages_per_session\",\"sessions_l30\",\"time_on_site_s\",\"pricing_views_l7\",\"past_purchases\"]),\n",
     "    (\"cat\", OneHotEncoder(handle_unknown=\"ignore\"), [\"ad_channel\",\"device\",\"region\",\"campaign\"]),\n",
     "    (\"bin\", \"passthrough\", [\"discount_flag\",\"competitor_visits\"])\n",
     "])\n",
