--- a/Classification/3_2_DecisionTrees.ipynb
+++ b/Classification/3_2_DecisionTrees.ipynb
@@ -21,7 +21,11 @@
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
+    "from sklearn.tree import DecisionTreeClassifier, plot_tree, _tree\n",
+    "from sklearn.metrics import (roc_auc_score, average_precision_score, roc_curve,\n",
+    "                             precision_recall_curve, confusion_matrix, f1_score, brier_score_loss)\n",
+    "from sklearn.calibration import calibration_curve, CalibratedClassifierCV\n",
+    "from sklearn.base import clone\n",
     "\n",
     "!wget -q https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Classification/classification_utils.py\n",
     "import classification_utils as utils\n",
@@ -70,9 +74,6 @@
    "outputs": [],
    "source": [
     "# Text view of the top of the tree (depth ≤ 3) with counts & probabilities\n",
-    "import numpy as np\n",
-    "from sklearn.tree import _tree\n",
-    "\n",
     "est = tree.named_steps[\"clf\"]\n",
     "fn = tree.named_steps[\"pre\"].get_feature_names_out()\n",
     "\n",
@@ -121,10 +122,6 @@
    "outputs": [],
    "source": [
     "# PR‑AUC / ROC‑AUC and confusion matrix at proposed threshold (F1-opt)\n",
-    "import numpy as np, matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import (roc_auc_score, average_precision_score, roc_curve,\n",
-    "                             precision_recall_curve, confusion_matrix, f1_score)\n",
-    "\n",
     "roc_auc = roc_auc_score(y_test, probs)\n",
     "pr_auc  = average_precision_score(y_test, probs)\n",
     "print(f\"ROC‑AUC: {roc_auc:.3f}  |  PR‑AUC: {pr_auc:.3f}\")\n",
@@ -172,11 +169,6 @@
    "outputs": [],
    "source": [
     "# Calibration curves pre/post calibration (isotonic) and Brier scores\n",
-    "import numpy as np, matplotlib.pyplot as plt\n",
-    "from sklearn.calibration import calibration_curve, CalibratedClassifierCV\n",
-    "from sklearn.metrics import brier_score_loss\n",
-    "from sklearn.base import clone\n",
-    "\n",
     "# Fit a calibrated version of the SAME pipeline (fresh clone)\n",
     "base = clone(tree)\n",
     "cal = CalibratedClassifierCV(estimator=base, method=\"isotonic\", cv=3)\n",
@@ -219,11 +211,6 @@
    "outputs": [],
    "source": [
     "# Stability of top splits across quarters (time-aware)\n",
-    "import pandas as pd\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.base import clone\n",
-    "\n",
     "def root_feature_name(pipe, X, y):\n",
     "    model = clone(pipe)\n",
     "    model.fit(X, y)\n",
@@ -279,8 +266,6 @@
    "outputs": [],
    "source": [
     "# Fairness metrics across segments at threshold t_star\n",
-    "import numpy as np, pandas as pd\n",
-    "\n",
     "def seg_report(df_eval, seg_col, y_true, y_prob, t):\n",
     "    out = []\n",
     "    for val, idx in df_eval.groupby(seg_col).groups.items():\n",
