--- a/Classification/3_3_RandomForest.ipynb
+++ b/Classification/3_3_RandomForest.ipynb
@@ -22,13 +22,9 @@
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "import numpy as np, matplotlib.pyplot as plt\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.base import clone\n",
-    "from sklearn.metrics import roc_auc_score, average_precision_score\n",
-    "from sklearn.metrics import confusion_matrix, f1_score\n",
+    "from sklearn.metrics import roc_auc_score, average_precision_score, confusion_matrix, f1_score, brier_score_loss\n",
     "from sklearn.calibration import calibration_curve, CalibratedClassifierCV\n",
-    "from sklearn.metrics import brier_score_loss\n",
     "\n",
     "!wget -q https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Classification/classification_utils.py\n",
     "import classification_utils as utils\n",
@@ -38,14 +34,14 @@
     "df = pd.read_csv(csv_path, parse_dates=[\"ts\"]).sort_values(\"ts\")\n",
     "train, test = utils.chrono_split(df, \"ts\", test_frac=0.2)\n",
     "\n",
-    "features = [\"ad_channel\",\"device\",\"region\",\"campaign\",\"spend_l7\",\"pages_per_session\",\"sessions_l30\",\"time_on_site_s\",\"pricing_views_l7\",\"email_opens_l30\",\"past_purchases\",\"tenure_days\",\"discount_flag\",\"competitor_visits\"]\n",
+    "features = [\"ad_channel\",\"device\",\"region\",\"campaign\",\"spend_l7\",\"pages_per_session\",\"sessions_l30\",\"time_on_site_s\",\"pricing_views_l7\",\"past_purchases\",\"discount_flag\",\"competitor_visits\"]\n",
     "target = \"converted\"\n",
     "\n",
     "X_train, y_train = train[features], train[target]\n",
     "X_test, y_test = test[features], test[target]\n",
     "\n",
     "pre = ColumnTransformer([\n",
-    "    (\"num\", StandardScaler(), [\"spend_l7\",\"pages_per_session\",\"sessions_l30\",\"time_on_site_s\",\"pricing_views_l7\",\"email_opens_l30\",\"past_purchases\",\"tenure_days\"]),\n",
+    "    (\"num\", StandardScaler(), [\"spend_l7\",\"pages_per_session\",\"sessions_l30\",\"time_on_site_s\",\"pricing_views_l7\",\"past_purchases\"]),\n",
     "    (\"cat\", OneHotEncoder(handle_unknown=\"ignore\"), [\"ad_channel\",\"device\",\"region\",\"campaign\"]),\n",
     "    (\"bin\", \"passthrough\", [\"discount_flag\",\"competitor_visits\"])\n",
     "])\n",
