--- a/Classification/3_3_RandomForest_Conceptual_Visuals.ipynb
+++ b/Classification/3_3_RandomForest_Conceptual_Visuals.ipynb
@@ -80,9 +80,6 @@
    "outputs": [],
    "source": [
     "\n",
-    "from sklearn.datasets import make_moons\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
     "X, y = make_moons(n_samples=1200, noise=0.30, random_state=12)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, stratify=y, random_state=12)\n",
     "\n",
@@ -95,7 +92,7 @@
     "\n",
     "print(\"Tree  — test accuracy:\", round(accuracy_score(y_test, tree.predict(X_test)), 3))\n",
     "print(\"Forest— test accuracy:\", round(accuracy_score(y_test, rf.predict(X_test)), 3))\n",
-    "print(\"Forest— OOB score   :\", round(rf.oob_score_, 3))\n"
+    "print(\"Forest— OOB score   :\", round(rf.oob_score_, 3))"
    ]
   },
   {
@@ -106,7 +103,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "plot_decision_boundary(tree, X_train, y_train, title=\"Single Decision Tree — Decision Boundary\")\n"
+    "plot_decision_boundary(tree, X_train, y_train, title=\"Single Decision Tree — Decision Boundary\")"
    ]
   },
   {
@@ -117,7 +114,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "plot_decision_boundary(rf, X_train, y_train, title=\"Random Forest — Decision Boundary (Smoothed by Voting)\")\n"
+    "plot_decision_boundary(rf, X_train, y_train, title=\"Random Forest — Decision Boundary (Smoothed by Voting)\")"
    ]
   },
   {
@@ -138,7 +135,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "n = X_train.shape[0]\n",
     "idx = np.arange(n)\n",
     "boot_idx = np.random.choice(idx, size=n, replace=True)\n",
@@ -148,7 +144,7 @@
     "plt.scatter(X_train[boot_idx,0], X_train[boot_idx,1], s=12, alpha=0.55, label=\"Bootstrap sample\")\n",
     "plt.scatter(X_train[oob_mask,0], X_train[oob_mask,1], s=12, alpha=0.95, label=\"OOB (this tree)\")\n",
     "plt.title(\"Bootstrapping: In-Bag vs Out-of-Bag Points\")\n",
-    "plt.legend(); plt.tight_layout(); plt.show()\n"
+    "plt.legend(); plt.tight_layout(); plt.show()"
    ]
   },
   {
@@ -169,7 +165,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "x_min, x_max = X[:,0].min()-0.8, X[:,0].max()+0.8\n",
     "y_min, y_max = X[:,1].min()-0.8, X[:,1].max()+0.8\n",
     "xx, yy = np.meshgrid(np.linspace(x_min, x_max, 220),\n",
@@ -187,7 +182,7 @@
     "plt.scatter(X[:,0], X[:,1], c=y, s=12, alpha=0.75)\n",
     "plt.title(\"Forest Majority Vote (Averaged over Trees)\")\n",
     "plt.xlabel(\"x1\"); plt.ylabel(\"x2\")\n",
-    "plt.tight_layout(); plt.show()\n"
+    "plt.tight_layout(); plt.show()"
    ]
   },
   {
@@ -208,11 +203,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "y_prob_test = rf.predict_proba(X_test)[:,1]\n",
     "print(\"Validation ROC-AUC:\", round(roc_auc_score(y_test, y_prob_test), 3))\n",
     "print(\"Validation PR-AUC :\", round(average_precision_score(y_test, y_prob_test), 3))\n",
-    "print(\"OOB score (accuracy-like):\", round(rf.oob_score_, 3))\n"
+    "print(\"OOB score (accuracy-like):\", round(rf.oob_score_, 3))"
    ]
   },
   {
@@ -233,7 +227,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "sizes = [1, 5, 10, 30, 60, 100, 200, 400]\n",
     "accs = []; aucs = []\n",
     "for m in sizes:\n",
@@ -251,7 +244,7 @@
     "plt.figure(figsize=(7,4))\n",
     "plt.plot(sizes, aucs, marker=\"o\")\n",
     "plt.xlabel(\"# Trees\"); plt.ylabel(\"ROC-AUC\"); plt.title(\"ROC-AUC vs Number of Trees\")\n",
-    "plt.tight_layout(); plt.show()\n"
+    "plt.tight_layout(); plt.show()"
    ]
   },
   {
@@ -272,7 +265,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "Xtab, ytab = make_classification(n_samples=2500, n_features=10, n_informative=4, n_redundant=2,\n",
     "                                 n_clusters_per_class=2, class_sep=1.1, random_state=12)\n",
     "Xtr, Xte, ytr, yte = train_test_split(Xtab, ytab, test_size=0.25, random_state=12, stratify=ytab)\n",
@@ -299,7 +291,7 @@
     "plt.ylabel(\"Permutation Importance (ΔAUC)\"); plt.title(\"Permutation Importances (95% CI)\")\n",
     "plt.tight_layout(); plt.show()\n",
     "\n",
-    "print(\"Tabular Validation ROC-AUC:\", round(roc_auc_score(yte, rf_tab.predict_proba(Xte)[:,1]), 3))\n"
+    "print(\"Tabular Validation ROC-AUC:\", round(roc_auc_score(yte, rf_tab.predict_proba(Xte)[:,1]), 3))"
    ]
   },
   {
@@ -309,11 +301,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "top_feat = int(np.argmax(rf_tab.feature_importances_))\n",
     "PartialDependenceDisplay.from_estimator(rf_tab, Xte, [top_feat], kind=\"average\", grid_resolution=30)\n",
     "plt.suptitle(f\"Partial Dependence — feature x{top_feat}\")\n",
-    "plt.tight_layout(); plt.show()\n"
+    "plt.tight_layout(); plt.show()"
    ]
   },
   {
