--- a/Unsupervised/4_1_kMeans.ipynb
+++ b/Unsupervised/4_1_kMeans.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# k-Means\n",
     "\n",
-    "**Scenario (Property Ops)**: Cluster incoming documents to auto-route (leases, invoices, inspection reports, maintenance tickets). We start with k-means++ and choose k using inertia and silhouette. Then we profile clusters against business features (pages, OCR, tables)."
+    "**Scenario (Property Ops)**: Cluster incoming documents to auto-route (leases, invoices, inspection reports, maintenance tickets). Start with k-means++ and choose k using inertia and silhouette. Then profile clusters against business features (pages, OCR, tables)."
    ]
   },
   {
@@ -22,7 +22,7 @@
     "from sklearn.metrics import silhouette_score\n",
     "\n",
     "!wget -q https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Unsupervised/unsup_utils.py.py\n",
-    "import unsupervised_utils as utils\n",
+    "import unsup_utils as utils\n",
     "csv_path = \"https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Unsupervised/unsup.csv\"\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
@@ -61,8 +61,8 @@
    "id": "1e79b0ca",
    "metadata": {},
    "source": [
-    "### Compare to known doc types (for teaching only)\n",
-    "We cross-tab clusters with the known `doc_type` to see if clusters align with business categories."
+    "### Compare to known doc types (for quick review)\n",
+    "Cross-tab clusters with the known `doc_type` to see if clusters align with business categories."
    ]
   },
   {
