--- a/Unsupervised/4_3_Hierarchical.ipynb
+++ b/Unsupervised/4_3_Hierarchical.ipynb
@@ -25,7 +25,7 @@
     "from scipy.cluster.hierarchy import linkage, dendrogram, fcluster, cophenet\n",
     "from scipy.spatial.distance import pdist\n",
     "\n",
-    "!wget -q https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Unsupervised/unsup_utils.py.py\n",
+    "!wget -q https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Unsupervised/unsup_utils.py\n",
     "import unsup_utils as utils\n",
     "csv_path = \"https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Unsupervised/unsup.csv\"\n",
     "warnings.filterwarnings(\"ignore\")\n",
