--- a/Unsupervised/4_1_kMeans.ipynb
+++ b/Unsupervised/4_1_kMeans.ipynb
@@ -21,7 +21,7 @@
     "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics import silhouette_score\n",
     "\n",
-    "!wget -q https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Unsupervised/unsup_utils.py.py\n",
+    "!wget -q https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Unsupervised/unsup_utils.py\n",
     "import unsup_utils as utils\n",
     "csv_path = \"https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Unsupervised/unsup.csv\"\n",
     "warnings.filterwarnings(\"ignore\")\n",
