--- a/Unsupervised/4_2_GMM.ipynb
+++ b/Unsupervised/4_2_GMM.ipynb
@@ -20,7 +20,7 @@
     "import pandas as pd, numpy as np, matplotlib.pyplot as plt, warnings\n",
     "from sklearn.mixture import GaussianMixture\n",
     "\n",
-    "!wget -q https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Unsupervised/unsup_utils.py.py\n",
+    "!wget -q https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Unsupervised/unsup_utils.py\n",
     "import unsup_utils as utils\n",
     "csv_path = \"https://raw.githubusercontent.com/Jihun-ust/ust-mail-557/main/Unsupervised/unsup.csv\"\n",
     "warnings.filterwarnings(\"ignore\")\n",
